[tool.poetry]
name = "poster-generator"
version = "1.0"
description = "The poster generator for urlab's smartmondays"
authors = ["Minigrim0 <grimauflorent@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "poster_generator"}]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.1.2"


[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
black = "^22.10.0"
pyproject-flake8 = "^5.0.4.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
